Adicionado o ícone do Whatsapp e o número para contato

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ Fusce ligula dolor, imperdiet sit amet sodales pulvinar, rhoncus nec tortor. Fus
 				
 			</div>
 			
-			<div style="position:fixed; bottom: 10px; right: 50px;">
-				<a href="https://api.whatsapp.com/send?phone=5584991340747" target="_blank">
-					<img src="imgs/whatsapp.png" height=60px;>
+			<div style="position:fixed; bottom: 10px; right: 30px;">
+				<a href="https://api.whatsapp.com/send?phone=5584986239979" target="_blank">
+					<img src="imgs/whatsapp.png" style="padding-left: 48px;" height=40px;>
 				</a>
-				<a>+55 84 99424-7641</a>
+				<div style="background-color:#111; color:#FFF; font-size:16px; border-radius:20px; padding:3px 10px;">(84) 98623-9979</div>
 			</div>
 		</div>
 		
